--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
   <div class="slider-wrapper">
     <div class="slider" id="newEpisodesSlider">
 
-      <article class="slide">
+     <article class="slide">
   <a href="/anime/al-batal-al-khumasi/episode-1/"
      title="مشاهدة الحلقة 1 من البطل الخماسي مترجمة">
 
     <img
-      src="https://i.ibb.co/tTwd183W/new-1.webp"
+      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
       alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي مترجمة HD"
       loading="lazy"
       decoding="async"
