--- a/index.html
+++ b/index.html
@@ -286,14 +286,12 @@
      title="مشاهدة الحلقة 1 من البطل الخماسي مترجمة">
 
     <img
-      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      src="/assets/images/episode-1.webp"
       alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي مترجمة HD"
       loading="lazy"
-      decoding="async"
     >
 
     <span class="badge">HD</span>
-
   </a>
 </article>
 
