--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -118,15 +118,15 @@
   <section class="anime-poster-section">
 
     <div class="anime-poster-box">
-      <img
-        src="/toonia/assets/images/anime-poster.webp"
-        alt="بوستر أنمي جوجوتسو كايسن الموسم الثالث"
-        width="220"
-        height="330"
-        loading="eager"
-        decoding="async"
-        onerror="this.src='/toonia/assets/images/poster-fallback.webp'">
-    </div>
+  <img
+    src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+    alt="بوستر أنمي جوجوتسو كايسن الموسم الثالث"
+    width="220"
+    height="330"
+    loading="eager"
+    decoding="async"
+    onerror="this.style.display='none'">
+</div>
 
     <div class="anime-info-box">
       <h1 class="anime-title">جوجوتسو كايسن – الموسم الثالث</h1>
