--- a/index.html
+++ b/index.html
@@ -281,16 +281,9 @@
   <div class="slider-wrapper">
     <div class="slider" id="newEpisodesSlider">
 
-     <article class="slide">
-  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/"
-     title="مشاهدة الحلقة 1 من البطل الخماسي مترجمة">
-
-    <img
-      src="/toonia/assets/images/episode-1.webp"
-      alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي مترجمة HD"
-      loading="lazy"
-    >
-
+      <article class="slide">
+  <a href="#">
+    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
     <span class="badge">HD</span>
   </a>
 </article>
