--- a/index.html
+++ b/index.html
@@ -282,8 +282,11 @@
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
-  <a href="#">
-    <img src="https://i.ibb.co/tTwd183W/new-1.webp" alt="حلقة جديدة 1" loading="lazy">
+  <a href="/toonia/anime/al-batal-al-khumasi/">
+    <img
+      src="https://i.ibb.co/tTwd183W/new-1.webp"
+      alt="مشاهدة حلقات أنمي البطل الخماسي"
+      loading="lazy">
     <span class="badge">HD</span>
   </a>
 </article>
