--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
     <div class="slider" id="newEpisodesSlider">
 
       <article class="slide">
-  <a href="/toonia/anime/al-batal-al-khumasi/">
+  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/">
     <img
       src="https://i.ibb.co/tTwd183W/new-1.webp"
-      alt="مشاهدة حلقات أنمي البطل الخماسي"
+      alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي"
       loading="lazy">
     <span class="badge">HD</span>
   </a>
