--- a/index.html
+++ b/index.html
@@ -281,15 +281,17 @@
   <div class="slider-wrapper">
     <div class="slider" id="newEpisodesSlider">
 
-      <article class="slide">
-  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/">
+      <div class="anime-poster-box">
+  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/" title="مشاهدة حلقات أنمي البطل الخماسي">
     <img
-      src="https://i.ibb.co/tTwd183W/new-1.webp"
-      alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي"
-      loading="lazy">
-    <span class="badge">HD</span>
+      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="بوستر أنمي البطل الخماسي"
+      width="220"
+      height="330"
+      loading="eager"
+      decoding="async">
   </a>
-</article>
+</div>
 
 <article class="slide">
   <a href="#">
