--- a/index.html
+++ b/index.html
@@ -281,17 +281,15 @@
   <div class="slider-wrapper">
     <div class="slider" id="newEpisodesSlider">
 
-      <div class="anime-poster-box">
-  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/" title="مشاهدة حلقات أنمي البطل الخماسي">
+      <article class="slide">
+  <a href="/toonia/anime/al-batal-al-khumasi/episode-1/">
     <img
       src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="بوستر أنمي البطل الخماسي"
-      width="220"
-      height="330"
-      loading="eager"
-      decoding="async">
+      alt="مشاهدة الحلقة 1 من أنمي البطل الخماسي"
+      loading="lazy">
+    <span class="badge">HD</span>
   </a>
-</div>
+</article>
 
 <article class="slide">
   <a href="#">
