--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -115,7 +115,7 @@
 <main class="episodes-page">
 
   <!-- بوستر الأنمي + معلومات -->
-  <section class="anime-poster-section">
+  <section class="hero anime-poster-section">
 
     <div class="anime-poster-box">
       <img
