--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -112,41 +112,22 @@
 </div>
 
 <!-- ================= MAIN (EPISODES PAGE) ================= -->
-<main class="episodes-page">
+<section class="anime-bg-header">
 
-  <!-- بوستر الأنمي + معلومات -->
-  <section class="hero anime-poster-section">
+  <div class="anime-bg-content">
+    <img
+      class="anime-poster"
+      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="بوستر الأنمي">
 
-    <div class="anime-poster-box">
-      <img
-        class="anime-poster-img"
-        src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-        alt="بوستر أنمي جوجوتسو كايسن الموسم الثالث"
-        loading="eager"
-        decoding="async"
-        onerror="this.style.display='none'">
+    <div class="anime-info">
+      <h1>جوجوتسو كايسن – الموسم الثالث</h1>
+      <div class="anime-meta">TV • 24 دقيقة • 2026</div>
+      <p>تدور أحداث الموسم الثالث من أنمي جوجوتسو كايسن حول لعبة الإبادة...</p>
     </div>
+  </div>
 
-    <div class="anime-info-box">
-      <h1 class="anime-title">جوجوتسو كايسن – الموسم الثالث</h1>
-
-      <div class="anime-meta">
-        <span>TV</span>
-        <span>•</span>
-        <span>24 دقيقة</span>
-        <span>•</span>
-        <span>2026</span>
-      </div>
-
-      <p class="anime-description">
-        تدور أحداث الموسم الثالث من أنمي جوجوتسو كايسن حول لعبة الإبادة،
-        حيث تتصاعد المواجهات وتنكشف أسرار جديدة تهدد توازن عالم الجوجوتسو.
-      </p>
-    </div>
-
-  </section>
-
-</main>
+</section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="site-footer">
