--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/toonia/assets/css/components.css">
   <link rel="stylesheet" href="/toonia/assets/css/navigation.css">
   <link rel="stylesheet" href="/toonia/assets/css/sections.css">
+  <link rel="stylesheet" href="/toonia/assets/css/hero.css">
 </head>
 
 <body>
