--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -116,16 +116,9 @@
 <section class="anime-bg-header">
 
   <div class="anime-bg-content">
-    <img
-      class="anime-poster"
-      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="بوستر الأنمي">
-
-    <div class="anime-info">
-      <h1>جوجوتسو كايسن – الموسم الثالث</h1>
-      <div class="anime-meta">TV • 24 دقيقة • 2026</div>
-      <p>تدور أحداث الموسم الثالث من أنمي جوجوتسو كايسن حول لعبة الإبادة...</p>
-    </div>
+    <h1 class="anime-title">
+      البطل الخماسي (Combattler V)
+    </h1>
   </div>
 
 </section>
