--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -116,9 +116,14 @@
 <section class="anime-bg-header">
 
   <div class="anime-bg-content">
-    <h1 class="anime-title">
-      البطل الخماسي (Combattler V)
-    </h1>
+    <img
+      class="anime-poster"
+      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="بوستر أنمي البطل الخماسي">
+
+    <div class="anime-info">
+      <h1>البطل الخماسي (Combattler V)</h1>
+    </div>
   </div>
 
 </section>
