--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -128,6 +128,59 @@
 
 </section>
 
+
+
+<section class="anime-details-section">
+
+  <!-- أزرار التفاعل -->
+  <div class="anime-actions">
+    <button class="btn-favorite">أضف إلى المفضلات</button>
+    <button class="btn-watchlater">أضف للمشاهدة لاحقًا</button>
+  </div>
+
+  <!-- العنوان (اختياري تكراره بصريًا) -->
+  <h2 class="anime-details-title">البطل الخماسي (Combattler V)</h2>
+
+  <!-- التقييم -->
+  <div class="anime-rating">
+    <div class="stars">
+      ★★★★☆
+    </div>
+    <span class="rating-value">4.20</span>
+    <span class="rating-count">10 تقييم</span>
+  </div>
+
+  <!-- الوصف -->
+  <div class="anime-story">
+    <h3>القصة</h3>
+    <p>
+      تدور أحداث أنمي البطل الخماسي حول خمسة طيارين يقودون مركبات متطورة
+      تندمج لتشكيل الروبوت العملاق كومباتلر V، في مواجهة تهديدات
+      إمبراطورية كامبيلار الشريرة.
+    </p>
+  </div>
+
+  <!-- المعلومات الإضافية -->
+  <div class="anime-meta-list">
+    <div><strong>القسم:</strong> مسلسل مدبلج</div>
+    <div><strong>سنة الإنتاج:</strong> 1976</div>
+    <div><strong>النوع:</strong> أكشن، خيال علمي، Mecha</div>
+    <div><strong>عدد الحلقات:</strong> 54 حلقة</div>
+    <div><strong>مدة الحلقة:</strong> 24 دقيقة</div>
+    <div><strong>الجودة:</strong> HD</div>
+    <div><strong>المصدر:</strong> ArabP2P</div>
+  </div>
+
+  <!-- المشاركة -->
+  <div class="anime-share">
+    <button>Facebook</button>
+    <button>X</button>
+    <button>WhatsApp</button>
+    <button>Telegram</button>
+  </div>
+
+</section>
+
 <!-- ================= FOOTER ================= -->
 <footer class="site-footer">
 
